--- a/res/layout/menu.xml
+++ b/res/layout/menu.xml
@@ -4,7 +4,8 @@
   xmlns:app="http://schemas.android.com/apk/res/com.communitymarket"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
-  android:orientation="vertical">
+  android:orientation="vertical"
+  android:background="@drawable/background_gradient">
   <com.communitymarket.MenuButtonItem
   	android:id="@+id/markets_button"
   	android:text="@string/markets"
