--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -6,5 +6,6 @@
 		<item name="android:layout_marginLeft">5dip</item>
 		<item name="android:layout_marginRight">5dip</item>
 		<item name="android:gravity">center_vertical</item>
+		<item name="android:textSize">14px</item>
 	</style>
 </resources>
