--- a/res/layout/menu.xml
+++ b/res/layout/menu.xml
@@ -25,5 +25,6 @@
   <com.communitymarket.MenuButtonItem
   	android:id="@+id/manage_button"
   	android:text="@string/manage_markets"
-  	style="@style/MenuButtonItem" />
+  	style="@style/MenuButtonItem"
+  	android:visibility="gone" />
 </LinearLayout>
