--- a/res/layout/find_markets.xml
+++ b/res/layout/find_markets.xml
@@ -25,12 +25,14 @@
 		android:layout_marginBottom="10px"
 		android:layout_marginLeft="10px"
 		android:layout_marginRight="10px"
-		/>
+		/>	
 	<Button
-		android:layout_height="30px"
+		android:layout_height="wrap_content"
 		android:layout_width="75px"
+		android:id="@+id/search_button"
 		android:text="Search" 
 		android:layout_gravity="center_horizontal"
-		android:layout_marginBottom="130px" />
+		android:layout_marginBottom="130px"
+		/>
 		 
 </LinearLayout>
