--- a/res/layout/market_search_results.xml
+++ b/res/layout/market_search_results.xml
@@ -18,7 +18,7 @@
 	<ImageView 
 		android:layout_gravity="center"
 		android:layout_width="wrap_content" 
-		android:src="@drawable/map" 
+		android:src="@drawable/map2" 
 		android:layout_height="wrap_content"
 		android:layout_marginRight="15dip"
 		android:id="@+id/imageView1"
