--- a/res/layout/farmers_list.xml
+++ b/res/layout/farmers_list.xml
@@ -29,7 +29,7 @@
 	<Button
 		android:id="@+id/search_farmers_button"
 		android:layout_height="wrap_content"
-		android:layout_width="75px"
+		android:layout_width="wrap_content"
 		android:text="Search" 
 		android:layout_gravity="center_horizontal"
 		android:layout_marginBottom="130px" />
