--- a/res/layout/find_markets.xml
+++ b/res/layout/find_markets.xml
@@ -28,7 +28,7 @@
 		/>	
 	<Button
 		android:layout_height="wrap_content"
-		android:layout_width="75px"
+		android:layout_width="wrap_content"
 		android:id="@+id/search_button"
 		android:text="Search" 
 		android:layout_gravity="center_horizontal"
