--- a/res/layout/popup_register.xml
+++ b/res/layout/popup_register.xml
@@ -49,26 +49,23 @@
 		android:layout_marginLeft="10px"
 		android:layout_marginRight="10px"
 		/>
-	<RelativeLayout 
-		android:layout_width="match_parent" 
-		android:layout_height="wrap_content" 
-		android:id="@+id/relativeLayout1">
-		<Button 
-			android:layout_height="wrap_content"
-		 	android:id="@+id/popup_menu_button1"
-		 	android:layout_width="100dip" 
-		 	android:text="Cancel"
-		 	android:layout_marginLeft="10px">
-		 </Button>
+	<LinearLayout
+		android:layout_width="wrap_content" 
+		android:layout_height="wrap_content"
+		android:orientation="horizontal"
+		android:layout_marginLeft="10px"
+		android:layout_gravity="left">
 		<Button
 			 android:id="@+id/popup_menu_button3" 
 			 android:layout_height="wrap_content" 
-			 android:layout_width="90dip" 
-			 android:text="Sign In" 
-			 android:layout_alignParentTop="true" 
-			 android:layout_marginLeft="120px">
-			</Button>
-		
-	</RelativeLayout>
+			 android:layout_width="125dip" 
+			 android:text="Register" />
+		<Button 
+			android:layout_height="wrap_content"
+		 	android:id="@+id/popup_menu_button1"
+		 	android:layout_width="125dip" 
+		 	android:text="Cancel"
+		 	android:layout_marginLeft="5dip" />
+	</LinearLayout>
 
 </LinearLayout>
