--- a/res/layout/farmers_list.xml
+++ b/res/layout/farmers_list.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/background">
+    android:background="@drawable/background" 
+    android:layout_gravity="top" 
+    android:paddingTop="0dip" 
+    android:orientation="vertical">
     
+    <LinearLayout
+	    android:orientation="vertical"
+	    android:layout_width="fill_parent"
+	    android:layout_gravity="top" 
+	    android:paddingTop="0dip" 
+	    android:layout_height="wrap_content">
     <TextView
 		android:layout_gravity="center_horizontal"
 		android:text="Find Farmer"
@@ -13,31 +21,315 @@
 		android:layout_height="wrap_content"
 		android:layout_marginTop="15px"
 		android:layout_marginBottom="20px"
-		android:textSize="20px"/>
-	
-	<EditText
-		android:layout_gravity="center_horizontal"
-		android:hint="Enter Name"
-		android:textColor="#111"
-		android:editable="true"
-		android:layout_width="match_parent" 
-		android:layout_height="wrap_content" 
-		android:layout_marginBottom="10px"
-		android:layout_marginLeft="10px"
-		android:layout_marginRight="10px"
-		/>
+		android:textSize="20px" 
+		android:layout_centerHorizontal="true"
+		android:layout_weight="0"/>
+    <EditText 
+    	android:layout_height="wrap_content" 
+    	android:layout_marginRight="10px" 
+    	android:textColor="#111" 
+    	android:id="@+id/editText1" 
+    	android:layout_marginBottom="10px" 
+    	android:layout_marginLeft="10px" 
+    	android:text="EditText" 
+    	android:editable="true" 
+    	android:hint="Enter Farmer" 
+    	android:layout_width="match_parent"
+    	android:layout_weight="0">
+    </EditText>
 	<Button
 		android:id="@+id/search_farmers_button"
 		android:layout_height="wrap_content"
 		android:layout_width="wrap_content"
 		android:text="Search" 
 		android:layout_gravity="center_horizontal"
-		android:layout_marginBottom="130px" />
-		
-	<ListView 
-		android:id="@+id/listView"
-		android:layout_height="wrap_content" 
-		android:layout_width="match_parent">
-	</ListView>
+		android:layout_centerHorizontal="true"
+		android:layout_weight="0"/>
+	</LinearLayout>
+	
+
+	 <LinearLayout
+    	android:layout_width="fill_parent"
+    	android:layout_height="?android:attr/listPreferredItemHeight"
+    	android:background="#22000000"
+		android:padding="6dip" 
+		android:orientation="horizontal"
+		android:clickable="true"
+		android:id="@+id/farmer1List"
+		android:layout_marginBottom="3dip">
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="6dip"
+        android:src="@drawable/john_johnston" />
+        <LinearLayout
+    		android:layout_width="wrap_content"
+    		android:layout_height="fill_parent"
+    		android:orientation="vertical">
+            <TextView 
+            	android:layout_height="wrap_content" 
+            	android:id="@+id/textView1" 
+            	android:gravity="center_vertical" 
+            	android:text="John Johnston" 
+            	android:textColor="#000000"
+            	android:layout_width="fill_parent">
+            </TextView>
+   			<TextView 
+   				android:layout_height="26dip" 
+   				android:text="Corn, Wheat" 
+   				android:textColor="#000000"
+   				android:id="@+id/secondLine" 
+   				android:ellipsize="marquee" 
+   				android:layout_width="fill_parent" 
+   				android:singleLine="true">
+   			</TextView>
+        </LinearLayout>
+        <LinearLayout
+    		android:layout_width="fill_parent"
+    		android:layout_height="fill_parent"
+    		android:orientation="vertical">
+    <RatingBar 
+    	android:id="@+id/avg_farmer_rating" 
+    	android:layout_height="wrap_content" 
+    	android:stepSize="0.1" 
+    	android:numStars="5" 
+    	style="?android:attr/ratingBarStyleSmall" 
+    	android:layout_width="wrap_content" 
+    	android:layout_gravity="right"
+    	android:rating="3">
+    	
+    </RatingBar>
+    </LinearLayout>
+	</LinearLayout>
+	
+	<LinearLayout
+    	android:layout_width="fill_parent"
+    	android:layout_height="?android:attr/listPreferredItemHeight"
+    	android:background="#22000000"
+		android:padding="6dip" 
+		android:orientation="horizontal"
+		android:clickable="true"
+		android:id="@+id/farmer2List"
+		android:layout_marginBottom="3dip">
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="6dip"
+        android:src="@drawable/bob_newhart" />
+        <LinearLayout
+    		android:layout_width="wrap_content"
+    		android:layout_height="fill_parent"
+    		android:orientation="vertical">
+            <TextView 
+            	android:layout_height="wrap_content" 
+            	android:id="@+id/textView1" 
+            	android:gravity="center_vertical" 
+            	android:text="Bob Newhart" 
+            	android:textColor="#000000"
+            	android:layout_width="fill_parent">
+            </TextView>
+   			<TextView 
+   				android:layout_height="26dip" 
+   				android:text="Apples, Green Beans" 
+   				android:textColor="#000000"
+   				android:id="@+id/secondLine" 
+   				android:ellipsize="marquee" 
+   				android:layout_width="fill_parent" 
+   				android:singleLine="true">
+   			</TextView>
+        </LinearLayout>
+        <LinearLayout
+    		android:layout_width="fill_parent"
+    		android:layout_height="fill_parent"
+    		android:orientation="vertical">
+    <RatingBar 
+    	android:id="@+id/avg_farmer_rating" 
+    	android:layout_height="wrap_content" 
+    	android:stepSize="0.1" 
+    	android:numStars="5" 
+    	style="?android:attr/ratingBarStyleSmall" 
+    	android:layout_width="wrap_content" 
+    	android:layout_gravity="right"
+    	android:rating="4.2">
+    	
+    </RatingBar>
+    </LinearLayout>
+	</LinearLayout>
+	
+	<LinearLayout
+    	android:layout_width="fill_parent"
+    	android:layout_height="?android:attr/listPreferredItemHeight"
+    	android:background="#22000000"
+		android:padding="6dip" 
+		android:orientation="horizontal"
+		android:clickable="true"
+		android:id="@+id/farmer3List"
+		android:layout_marginBottom="3dip">
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="6dip"
+        android:src="@drawable/paul_newman" />
+        <LinearLayout
+    		android:layout_width="wrap_content"
+    		android:layout_height="fill_parent"
+    		android:orientation="vertical">
+            <TextView 
+            	android:layout_height="wrap_content" 
+            	android:id="@+id/textView1" 
+            	android:gravity="center_vertical" 
+            	android:text="Paul Newman" 
+            	android:textColor="#000000"
+            	android:layout_width="fill_parent">
+            </TextView>
+   			<TextView 
+   				android:layout_height="26dip" 
+   				android:text="Salad Dressing" 
+   				android:textColor="#000000"
+   				android:id="@+id/secondLine" 
+   				android:ellipsize="marquee" 
+   				android:layout_width="fill_parent" 
+   				android:singleLine="true">
+   			</TextView>
+        </LinearLayout>
+        <LinearLayout
+    		android:layout_width="fill_parent"
+    		android:layout_height="fill_parent"
+    		android:orientation="vertical">
+    <RatingBar 
+    	android:id="@+id/avg_farmer_rating" 
+    	android:layout_height="wrap_content" 
+    	android:stepSize="0.1" 
+    	android:numStars="5" 
+    	style="?android:attr/ratingBarStyleSmall" 
+    	android:layout_width="wrap_content" 
+    	android:layout_gravity="right"
+    	android:rating="2.8">
+    </RatingBar>
+    </LinearLayout>
+	</LinearLayout>
+	
+	<LinearLayout
+    	android:layout_width="fill_parent"
+    	android:layout_height="?android:attr/listPreferredItemHeight"
+    	android:background="#22000000"
+		android:padding="6dip" 
+		android:orientation="horizontal"
+		android:clickable="true"
+		android:id="@+id/farmer4List"
+		android:layout_marginBottom="3dip">
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="6dip"
+        android:src="@drawable/barry_griffin" />
+        <LinearLayout
+    		android:layout_width="wrap_content"
+    		android:layout_height="fill_parent"
+    		android:orientation="vertical">
+            <TextView 
+            	android:layout_height="wrap_content" 
+            	android:id="@+id/textView1" 
+            	android:gravity="center_vertical" 
+            	android:text="Barry Griffen" 
+            	android:textColor="#000000"
+            	android:layout_width="fill_parent">
+            </TextView>
+   			<TextView 
+   				android:layout_height="26dip" 
+   				android:text="Tomatos, Grapes" 
+   				android:textColor="#000000"
+   				android:id="@+id/secondLine" 
+   				android:ellipsize="marquee" 
+   				android:layout_width="fill_parent" 
+   				android:singleLine="true">
+   			</TextView>
+        </LinearLayout>
+        <LinearLayout
+    		android:layout_width="fill_parent"
+    		android:layout_height="fill_parent"
+    		android:orientation="vertical">
+    <RatingBar 
+    	android:id="@+id/avg_farmer_rating" 
+    	android:layout_height="wrap_content" 
+    	android:stepSize="0.1" 
+    	android:numStars="5" 
+    	style="?android:attr/ratingBarStyleSmall" 
+    	android:layout_width="wrap_content" 
+    	android:layout_gravity="right"
+    	android:rating="2.3">
+    </RatingBar>
+    </LinearLayout>
+	</LinearLayout>
+	
+	<LinearLayout
+    	android:layout_width="fill_parent"
+    	android:layout_height="?android:attr/listPreferredItemHeight"
+    	android:background="#22000000"
+		android:padding="6dip" 
+		android:orientation="horizontal"
+		android:clickable="true"
+		android:id="@+id/farmer5List"
+		android:layout_marginBottom="3dip"
+		android:onClick="myClickHandler">
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="6dip"
+        android:src="@drawable/liz_lemon" />
+        <LinearLayout
+    		android:layout_width="wrap_content"
+    		android:layout_height="fill_parent"
+    		android:orientation="vertical">
+            <TextView 
+            	android:layout_height="wrap_content" 
+            	android:id="@+id/textView1" 
+            	android:gravity="center_vertical" 
+            	android:text="Liz Lemon" 
+            	android:textColor="#000000"
+            	android:layout_width="fill_parent">
+            </TextView>
+   			<TextView 
+   				android:layout_height="26dip" 
+   				android:text="Lemons, Carrots" 
+   				android:textColor="#000000"
+   				android:id="@+id/secondLine" 
+   				android:ellipsize="marquee" 
+   				android:layout_width="fill_parent" 
+   				android:singleLine="true">
+   			</TextView>
+        </LinearLayout>
+        <LinearLayout
+    		android:layout_width="fill_parent"
+    		android:layout_height="fill_parent"
+    		android:orientation="vertical">
+    <RatingBar 
+    	android:id="@+id/avg_farmer_rating" 
+    	android:layout_height="wrap_content" 
+    	android:stepSize="0.1" 
+    	android:numStars="5" 
+    	style="?android:attr/ratingBarStyleSmall" 
+    	android:layout_width="wrap_content" 
+    	android:layout_gravity="right"
+    	android:rating="4.2">
+    </RatingBar>
+    </LinearLayout>
+	</LinearLayout>
+    
 </LinearLayout>
 
